# blockgame

./: .ccls  CMakeLists.txt  README.md
assets/shaders/: frag.glsl  vert.glsl
glad/src/: glad.c
lib/glad/include/glad/: glad.h
src/: block.cpp  block.h  block.hpp  camera.cpp  camera.hpp  hitbox.cpp  hitbox.hpp  main.cpp  player.cpp  player.hpp  shader.cpp  shader.h  world.cpp  world.hpp
